<resources>
    <string name="app_name">WishHair</string>
    <string name="App_title_name">We Share Wish Hair</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--    login -->
    <string name="login_title_1">Welcome to</string>
    <string name="login_title_2">WSWH</string>
    <string name="login_hint_id">ID</string>
    <string name="login_hint_pw">PW</string>
    <string name="sign_button_login">LOG IN</string>
    <string name="sign_button_register"><![CDATA[회원가입 >]]></string>
    <string name="sign_button_findPassword"><![CDATA[비밀번호 찾기 >]]></string>
    <!--    cert -->
    <string name="cert_message_1">이메일 인증</string>
    <string name="cert_message_2">• 이메일 주소</string>
    <string name="cert_hint_email">InqInq@email.com</string>
    <string name="cert_message_btn_send">메일 발송</string>
    <string name="cert_message_3">• 인증번호</string>
    <string name="cert_timer">남은 시간</string>
    <string name="cert_hint_submit">인증번호를 입력해주세요</string>
    <string name="cert_message_btn_submit">인증확인</string>
    <!--    terms -->
    <string name="sign_term_message1">필수 약관에 동의해주세요 :)</string>
    <string name="sign_term_message2">약관</string>
    <string name="register_term_1">WSWH 회원약관 (필수)</string>
    <string name="register_term_2">개인정보의 필수적인 사항에 대한 수집 이용 동의 (필수)</string>
    <string name="register_term_3">개인정보의 필수적인 제3자 제공에 대한 동의 (필수)</string>
    <!--    register -->
    <string name="sign_title">회원가입</string>
    <string name="register_message_1">회원정보</string>
    <string name="register_message_2">• 이름</string>
    <string name="register_condition_name">한글 또는 영문으로 입력해주세요</string>
    <string name="register_message_3">• 닉네임</string>
    <string name="register_condition_nickname">2~8자리의 공백을 제외한 영문/한글/숫자를 입력해주세요</string>
    <string name="register_message_4">• 비밀번호</string>
    <string name="register_condition_password">8~20자리의 영문/숫자/특수문자를 함께 입력해주세요</string>
    <string name="register_message_5">• 성별</string>
    <string name="register_message_sex">성별 :</string>
    <string name="register_text_sex_man">남성</string>
    <string name="register_text_sex_woman">여성</string>
    <string name="register_message_6">회원가입완료</string>
    <!-- find password -->
    <string name="find_password_message1">비밀번호 찾기</string>
    <string name="find_password_message2">새로운 비밀번호를 입력해주세요</string>
    <string name="find_password_message3">한번 더 입력해주세요</string>
    <string name="find_password_message4">비밀번호 수정 완료</string>
    <!--    review -->
    <string name="review_filter_whole">전체</string>
    <string name="review_filter_man">남성</string>
    <string name="review_filter_woman">여성</string>
    <string name="review_item_btn_view"><![CDATA[전체보기 >]]></string>
    <string name="review_recent_btn_write">리뷰 작성하기</string>
    <!--    review detail -->
    <string name="review_detail_menu_modify">리뷰수정</string>
    <string name="review_detail_menu_delete">리뷰삭제</string>
    <string name="review_detail_nicknameText">님</string>
    <string name="write_detail_btn_goHair">헤어스타일 바로보기</string>
    <!--    write review -->
    <string name="write_review_title">리뷰작성</string>
    <string name="write_review_message_1">시술은 만족스러우셨나요?</string>
    <string name="write_review_massage_2">시술에 대한 별점을 매겨주세요</string>
    <string name="write_review_massage_3">최소 5자, 최대 200자 사이로 작성해주세요</string>
    <string name="write_review_submit">리뷰 작성하기</string>
    <string name="write_review_message_4">• 헤어스타일명</string>
    <string name="write_review_message_5">• 사진</string>
    <string name="write_review_message_6">• 내용</string>

    <!--    home -->
    <string name="home_icon_notification">home_icon_notification</string>
    <string name="home_message_1">안녕하세요, </string>
    <string name="home_message_2">님!</string>
    <string name="home_message_3">얼굴형 분석 후 헤어스타일 추천 받아보세요</string>
    <string name="home_message_4">AI 헤어스타일 추천 바로가기</string>
    <string name="home_message_5">GO!</string>
    <string name="home_message_6">이달의 추천 리뷰</string>
    <string name="home_message_7">님 만을 위한 추천</string>
    <string name="review_monthly_message">님의 리뷰</string>
    <string name="home_item_rec_btn">상세보기 〉</string>

    <string name="xmlDisplay_username">userName</string>
    <string name="message_confirm">확인</string>
    <string name="message_cancel">취소</string>

    <!--    face func-->
    <string name="func_message_1">사진을 업로드해주세요 :)</string>
    <string name="func_message_2">정면을 보고 있는 사진을 업로드해주세요</string>
    <string name="func_message_btn_submit">얼굴형 분석하기</string>
    <!--    faceResult -->
    <string name="faceResult_message_1">님은 </string>
    <string name="faceResult_message_2">을</string>
    <string name="faceResult_message_3">소유하고 있네요!</string>
    <string name="faceResult_message_4">조건에 가장 적합한 헤어스타일은…</string>
    <string name="faceResult_btn_finish">얼굴형 분석 끝내기</string>
    <string name="loading_message">AI가 얼굴형을 분석하고 있어요</string>
    <string name="faceResult_recommendStyle_pic">faceResult_recommendStyle_pic</string>

    <!--    tag func -->
    <string name="tagFunc_title">헤어스타일 추천</string>
    <string name="tagFunc_message1">• 머리카락 기장</string>
    <string name="tagFunc_message2">• 펌 유무</string>
    <string name="tagFunc_message3">• 이미지</string>
    <string name="tagFunc_btn_submit">헤어스타일 추천받기</string>

    <string name="tagResult_btn_finish">헤어스타일 추천 종료</string>
    <string name="tagResult_title">태그를 반영한 추천 헤어스타일</string>

    <string name="tag_length_long">긴</string>
    <string name="tag_length_middle">중간</string>
    <string name="tag_length_short">짧은</string>
    <string name="tag_perm_O">펌 O</string>
    <string name="tag_perm_X">펌 X</string>
    <string name="tag_image_cute">귀여운</string>
    <string name="tag_image_upstage">도도한</string>
    <string name="tag_image_neat">깔끔한</string>
    <string name="tag_image_common">무난한</string>
    <string name="tag_image_light">가벼운</string>
    <string name="tag_image_heavy">무거운</string>
    <string name="tag_image_cool">시원한</string>
    <string name="tag_image_voluminous">볼륨있는</string>
    <string name="tag_image_trendy">트렌디한</string>
    <string name="tag_image_formal">포멀한</string>
    <string name="tag_image_manly">남성적인</string>
    <string name="tag_image_soft">부드러운</string>

</resources>
