<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".home.HomeFragment"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

<!--    title -->
        <LinearLayout
            android:id="@+id/home_layout_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
                <TextView
                    android:id="@+id/home_tv_hello"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_message_1"
                    android:textSize="27sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/home_title_receivedText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/xmlDisplay_username"
                    android:textSize="27sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/home_tv_settingMessage1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_message_2"
                    android:textSize="27sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>
            </LinearLayout>
            <TextView
                android:id="@+id/home_tv_settingMessage2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_message_3"
                android:textSize="27sp"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/home_tv_settingMessage3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/home_message_4"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textStyle="bold" />
            <FrameLayout
                android:id="@+id/home_layout_frame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp">
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/home_btn_tagFunc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#00FF0000"
                    android:text="@string/home_btn_tagFunc"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:drawableEnd="@drawable/next"
                    android:drawablePadding="10dp" />
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/home_btn_faceFuncAgain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#00FF0000"
                    android:layout_gravity="end"
                    android:text="@string/home_btn_faceFuncAgain"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:drawableEnd="@drawable/next"
                    android:drawablePadding="10dp" />
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/home_btn_faceFunc"
                    android:layout_width="78dp"
                    android:layout_height="78dp"
                    android:background="@drawable/home_shape_circle_button"
                    android:text="@string/home_message_5"
                    android:textSize="27sp"
                    android:textColor="@color/white"/>
            </FrameLayout>

        </LinearLayout>
<!--    ad banner -->
<!--        #TODO 광고 배너 구현 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@color/signBox_gray" >
        </LinearLayout>

<!--    review hot-->
        <LinearLayout
            android:id="@+id/home_linearLayout_review_hot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/home_message_6"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/home_ViewPager_review_monthly"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:clipChildren="false"/>
            <me.relex.circleindicator.CircleIndicator3
                android:id="@+id/home_circleIndicator"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                app:ci_drawable_unselected="@drawable/shape_indicator_un_select"
                app:ci_drawable="@drawable/shape_indicator_select"
                />

        </LinearLayout>

<!--        recommend -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp">
            <TextView
                android:id="@+id/home_recommend_userName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/xmlDisplay_username"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_message_7"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:textStyle="bold" />
        </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/home_recommend_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"/>

    </LinearLayout>
</ScrollView>
