<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sign.FindPasswordResultActivity">

    <TextView
        android:id="@+id/find_password_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:text="@string/find_password_message1"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/default_blue"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/find_password_message1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_gravity="center_vertical"
        android:text="@string/find_password_message2"
        android:textStyle="bold"
        android:textColor="@color/default_blue"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/find_password_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/find_password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/find_password_message1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/register_message_4"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/find_password_input_et_password"
            android:layout_width="match_parent"
            android:layout_height="33dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:background="@drawable/border_sign_text"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:drawableEnd="@drawable/sign_check_success"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/register_condition_password"
            android:textColor="@color/black"
            android:textSize="11sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/find_password_config"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/find_password_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/register_message_4"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/find_password_config_et_password"
            android:layout_width="match_parent"
            android:layout_height="33dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:background="@drawable/border_sign_text"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:drawableEnd="@drawable/sign_check_success"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/find_password_message3"
            android:textColor="@color/black"
            android:textSize="11sp" />
    </LinearLayout>
    <FrameLayout
        android:id="@+id/find_password_view_done"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#40000000"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="invisible">
        <LinearLayout
            android:layout_width="235dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/border_sign_register_done"
            android:layout_gravity="center"
            android:gravity="center">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:src="@drawable/sign_register_done"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/find_password_message4"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="@color/default_blue"/>
            <Button
                android:id="@+id/find_password_btn_done"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="17dp"
                android:background="@drawable/border_sign_button"
                android:text="@string/message_confirm"
                android:textSize="17sp"
                android:textStyle="bold"
                android:textColor="@color/text_ivory" />
        </LinearLayout>
    </FrameLayout>

    <!--    bottom -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <include layout="@layout/sign_bottom_bar" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
